Bug 137694 - Forms: Combobox or Listbox in a Tablecontrol: Entering by Mouse will destroy Navigation by Key
Summary: Forms: Combobox or Listbox in a Tablecontrol: Entering by Mouse will destroy ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.0.2.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-10-23 06:35 UTC by Robert Großkopf
Modified: 2021-01-14 07:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2020-10-23 06:35:08 UTC
Open https://bugs.documentfoundation.org/attachment.cgi?id=166637 (Attachment of bug 137662).
Open the form and click on the combobox for "Name" inside the tablecontrol. Now try to move by tabulator to the next field. Doesn't work since LO 7.0.* and VCL: gtk3. The tabulator will appear, after pressing it again an again, in the navigator of the form.

Works well in all LO versions up to LO 6.4.6.2, fails here with LO 7.0.2.2 and VCL: gtk3. Works also well with LO 7.0.2.2 and VCL: kf5.
Comment 1 Milston B. 2020-10-27 16:37:15 UTC
I can can reproduce this behavior.


Version: 7.0.2.2
     Build ID: 00(Build:2)
     CPU threads: 4; OS: Linux 5.9; UI render: default; VCL: gtk3
     Locale: de-DE (de_DE.UTF-8); UI: de-DE
     7.0.2-2
     Calc: threaded
Comment 2 Aron Budea 2021-01-03 16:22:05 UTC
This was fixed in 7.1 by the following commit:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3dac8855e93e09fab9d66f6cc4126a106ed44952
author		Caolán McNamara <caolanm@redhat.com>	2020-08-14 16:42:32 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-08-16 20:51:58 +0200

"let tab switch between cells"

Cherry-pick to 7.0: https://gerrit.libreoffice.org/c/core/+/108584
Comment 3 Aron Budea 2021-01-04 02:59:50 UTC
(In reply to Aron Budea from comment #2)
> Cherry-pick to 7.0: https://gerrit.libreoffice.org/c/core/+/108584
The fix depends on other weld-related changes in 7.1, I better not even try meddling with those. Caolán, if you agree this fix can reasonably be backported to 7.0, would you mind taking over?
Comment 4 Caolán McNamara 2021-01-13 16:13:51 UTC
I updated https://gerrit.libreoffice.org/c/core/+/108584 so what seems to solve this in 7-0 too
Comment 5 Commit Notification 2021-01-14 07:37:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/55e2721e1ea6b8db7c92e5bb304ec1fb2c3cf068

tdf#137694 let tab switch between cells

It will be available in 7.0.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.