tdf#137694 let tab switch between cells

Change-Id: I12806e2afc022c079d9db758973b8d1bfc0c7107
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100752
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 3dac8855e93e09fab9d66f6cc4126a106ed44952)