svtools/source/brwbox/ebbcontrols.cxx
@@ -22,6 +22,7 @@
 #include <vcl/fmtfield.hxx>
 #include <vcl/xtextedt.hxx>
 #include <vcl/textview.hxx>
+#include "datwin.hxx"
 
 namespace svt
 {
@@ -33,6 +34,7 @@ namespace svt
     {
         m_xWidget->set_entry_width_chars(1); // so a smaller than default width can be used
         m_xWidget->connect_changed(LINK(this, ComboBoxControl, SelectHdl));
+        m_xWidget->connect_key_press(LINK(this, ControlBase, KeyInputHdl));
     }
 
     void ComboBoxControl::dispose()
@@ -109,6 +111,11 @@ namespace svt
         GetComboBox().save_value();
     }
 
+    IMPL_LINK(ControlBase, KeyInputHdl, const KeyEvent&, rKEvt, bool)
+    {
+        return static_cast<BrowserDataWin*>(GetParent())->GetParent()->ProcessKey(rKEvt);
+    }
+
     //= ListBoxControl
     ListBoxControl::ListBoxControl(vcl::Window* pParent)
         : ControlBase(pParent, "svt/ui/listcontrol.ui", "ListControl")
@@ -116,6 +123,7 @@ namespace svt
     {
         m_xWidget->set_size_request(42, -1); // so a later narrow size request can stick
         m_xWidget->connect_changed(LINK(this, ListBoxControl, SelectHdl));
+        m_xWidget->connect_key_press(LINK(this, ControlBase, KeyInputHdl));
     }
 
     void ListBoxControl::dispose()
